[project]
name = "langgraph-multi-agent-requirements-system"
version = "0.1.0"
description = "Multi-agent Requirements Engineering system using LangGraph (Supervisor + Specialist Agents)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lawrence Willcox", GitHub = "https://github.com/AutomationPlease" }
]
keywords = [
    "langgraph",
    "langchain",
    "multi-agent",
    "requirements-engineering",
    "ai",
    "automation",
]
license = "MIT"

dependencies = [
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.3",
    "langgraph-api>=0.9.0",
    "langgraph-cli>=0.4.27",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.25",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
